# Head_Motion

./: .gitignore  CMakeLists.txt  Makefile  README.md  context.md
include/headmotion/app/: Commands.hpp  ConsoleLogger.h  InfoService.h  RecordStartService.h  ScanService.h  SyncService.h
include/headmotion/ble/: MetaWearBoardAdapter.h  SimpleBleAdapter.h  SimpleBleInfoBoard.h
include/headmotion/core/: BleDeviceInfo.h  DownloadProgress.h  HeadMotionSample.h  Result.h  SessionConfig.h  SessionMetadata.h
include/headmotion/interfaces/: IBleAdapter.h  ILogger.h  IMetaWearBoard.h  IMetadataStore.h  ISampleSink.h
include/headmotion/metawear/: MetaWearUsbTransport.hpp
include/headmotion/protocol/: UsbFrameCodec.hpp
include/headmotion/sdk/: MetaWearSdkBridge.hpp
include/headmotion/session/: BoardStateStore.hpp
include/headmotion/storage/: FileMetadataStore.h  JsonMetadataStore.h
include/headmotion/transport/: IByteTransport.hpp  SerialConfig.hpp  SerialPortFactory.hpp  SerialPortInfo.hpp
include/headmotion/util/: Hex.hpp  TimeUtils.h
src/: main.cpp
src/app/: BatteryCommand.cpp  CommandPayloadCommand.cpp  IdentifyCommand.cpp  ModuleInfoCommand.cpp  RawTxCommand.cpp  RecordResetCommand.cpp  RecordStartCommand.cpp  RecordStopCommand.cpp  ScanPortsCommand.cpp  SdkProbeCommand.cpp  SyncCommand.cpp
src/ble/: MetaWearBoardAdapter.cpp  SimpleBleAdapter.cpp  SimpleBleInfoBoard.cpp
src/metawear/: MetaWearUsbTransport.cpp
src/platform/linux/: LinuxSerialDiscovery.cpp  LinuxSerialDiscovery.hpp  LinuxSerialPort.cpp  LinuxSerialPort.hpp
src/protocol/: UsbFrameCodec.cpp
src/sdk/: MetaWearSdkBridge.cpp
src/session/: BoardStateStore.cpp
src/storage/: FileMetadataStore.cpp  JsonMetadataStore.cpp
src/transport/: SerialPortFactory.cpp
src/util/: Hex.cpp
test/: test_info_service.cpp  test_record_start_service.cpp  test_scan_service.cpp  test_sync_service.cpp
test/support/: FakeBleAdapter.h  FakeMetaWearBoard.h  FakeMetadataStore.h  FakeSampleSink.h  TestLogger.h
tools/: estimate_mms_memory.py  run_mms_memory_trials.sh
